--- a/src/main/webapp/userprofile.css
+++ b/src/main/webapp/userprofile.css
@@ -1,53 +1,106 @@
 .user-profile-header {
     width: 100%;
-    background: lightgrey;
+    background: #f8f9fa;
     height: 5em;
     display: flex;
-    flex-direction: row-reverse;
     align-items: center;
 }
 
-.discover-link {
-    height: 2.5em;
-    background-color: white;
-    width: 8em;
-    margin-right: 3em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.nav-container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1140px;
 }
 
-.user-name {
+.nav-brand {
+  display: inline-block;
+  padding-top: .3125rem;
+  padding-bottom: .3125rem;
+  margin-right: 1rem;
+  font-size: 1.25rem;
+  line-height: inherit;
+  white-space: nowrap;
+  color: black
+}
+
+.user-loggedin {
+    font-size: 16px;
+    line-height: 32px;
     height: 2.5em;
-    background-color: white;
     width: 8em;
-    margin-right: 3em;
     display: flex;
     align-items: center;
     justify-content: center;
+    color: #007bff
 }
 
 .user-profile-content {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    /* align-items: center; */
-    justify-content: center;
-    margin-top: 2em;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 1140px;
+}
+ 
+.user-information {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+  
+}
+.personal-information-box {
+  padding: 1.5em;
+  background-color: #f8f9fa;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 1.5em;
+  margin-right: 1.5rem;
+}
+
+.incivility-box {
+  padding: 1.5em;
+  background-color: #f8f9fa;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 1.5em;
+  margin-left: 1.5rem;
 }
 
 .user-edits-feed {
-    width: 105em;
-    height: 20em;
-    background-color: lightgrey;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+  padding: 1.5em;
+  background-color: #f8f9fa;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 1.5em;
 }
 
 .table-container{
     width: 100em;
+    margin: 2em;
 }
 
 th.dt-center, td.dt-center {
@@ -57,80 +110,11 @@ th.dt-center, td.dt-center {
 a:hover {
  cursor:pointer;
  text-decoration: none;
+ color: #007bff;
 }
 
-
-/* body {
-	overflow-x: hidden;
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	text-align: center;
-	align-items: center;
+a {
+  color: #007bff;
+  text-decoration: none;
+  background-color: transparent;
 }
-
-#content {
-	position: relative;
-	background: grey;
-	overflow: hidden;
-	width: 85%;
-	border: 1px solid black;
-	display: flex;
-	flex-direction: column;
-	text-align: center;
-	align-items: center;
-	justify-content: center;
-}
-
-.header {
-    width: 100%;
-}
-
-.discover-link {
-	float: left;
-	margin-right: 80%;
-	margin-bottom: 0%;
-}
-
-.user-name {
-	float: right;
-	margin-left: 80%;
-	margin-bottom: 10%;
-}
-
-#user-information {
-	width: 100%;
-}
-
-#personal-information-box {
-	float: left;
-	overflow: hidden;
-	width: 35%;
-	height: 10%;
-	border: 1px solid black;
-	margin: 5px;
-}
-
-#toxicity-score-box {
-	float: right;
-	overflow: hidden;
-	width: 35%;
-	height: 10%;
-	border: 1px solid black;
-	margin: 5px;
-}
-
-#user-edits {
-	overflow: hidden;
-}
-
-#user-edits ul {
-	list-style: none;
-}
-
-#user-edits li {
-	border: 1px solid black;
-	margin: 5px;
-	box-sizing: content-box;
-	width: 100%;
-} */
