--- a/src/main/webapp/discover-style.css
+++ b/src/main/webapp/discover-style.css
@@ -93,3 +93,12 @@ a {
   text-decoration: none;
   background-color: transparent;
 }
+
+.dashboard-slide-feed{
+  padding: 1.5em;
+  background-color: #f8f9fa;
+  display: flex;
+  flex-direction: column;
+  margin-top: 1.5em;
+  width: 100%;
+}
