Connected discover page and slider view

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -192,3 +192,9 @@ th.dt-center, td.dt-center {
   overflow-x: hidden;
   position: relative;
 }
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%
+}
