Add CSS to action buttons

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -53,6 +53,9 @@
 }
 
 /* ALL PAGES */
+body {
+    font-family: Source Sans Pro,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
+}
 a {
   text-decoration: none;
   background-color: transparent;
