Actions list is functional (TODO: change action statements)

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -285,3 +285,9 @@ body {
 #submit:hover {
   background-color: #e8e6e1;
 }
+
+/* actions */
+#list-div {
+    align-items: center;
+    justify-content: center;
+}
