Add cookies to prevent seeing comments that have already been addressed

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -20,6 +20,24 @@
   max-width: 1140px;
 }
 
+#table-container {
+  display: none;
+}
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid black; /* darkgrey */
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 .user-loggedin {
   margin-left: auto;
   font-size: 16px;
@@ -95,6 +113,7 @@ th.dt-center, td.dt-center {
   display: flex;
   flex-direction: column;
   margin-top: 1.5em;
+  max-width: 1140px;
 }
 
 .navbar-brand {
