--- a/src/main/webapp/discover-style.css
+++ b/src/main/webapp/discover-style.css
@@ -10,6 +10,25 @@
   max-width: 1140px;
 }
 
+
+#table-container {
+  display: none;
+}
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid black; /* darkgrey */
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 thead, tbody { display: block; }
 
 tbody {
