Add badges to actions in action page

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -307,3 +307,50 @@ body {
   margin-top: 1.5em;
   width: 100%;
 }
+
+/* badge */
+
+.badge-green {
+  display: inline-block;
+  min-width: 10px;
+  padding: 3px 7px;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 1;
+  color: #ffffff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  background-color: #28a745;
+  border-radius: 10px;
+}
+
+.badge-grey {
+  display: inline-block;
+  min-width: 10px;
+  padding: 3px 7px;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 1;
+  color: #ffffff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  background-color: #777777;
+  border-radius: 10px;
+}
+
+.badge-red {
+  display: inline-block;
+  min-width: 10px;
+  padding: 3px 7px;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 1;
+  color: #ffffff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  background-color: #dc3545;
+  border-radius: 10px;
+}
