--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -72,7 +72,6 @@
 
 /* ALL PAGES */
 a {
-  color: #007bff;
   text-decoration: none;
   background-color: transparent;
 }
@@ -113,14 +112,13 @@ th.dt-center, td.dt-center {
   display: flex;
   flex-direction: column;
   margin-top: 1.5em;
-  max-width: 1140px;
 }
 
 .navbar-brand {
   color: black;
   display: inline-block;
-  padding-top: .3125rem;
-  padding-bottom: .3125rem;
+  padding-top: 0.3125rem;
+  padding-bottom: 0.3125rem;
   margin-right: 1rem;
   font-size: 1.25rem;
   line-height: inherit;
@@ -187,25 +185,26 @@ th.dt-center, td.dt-center {
 
 /* Edit Comment Page */
 
+body {
+    font-family: 'Roboto';
+}
+
 .edit-info {
   padding: 20px;
   margin-left: auto;
   margin-right: auto;
   border-radius: 25px;
-  background: white;
+  background: #f8f9fa;  
 }
 
-.section {
+.feed {
   padding: 1.5em;
   max-width: 1140px;
-  background-color: #f8f9fa;
-  justify-content: center;
-  align-items: center;
+  background-color: white;
   display: flex;
   flex-direction: column;
   margin-top: 1.5em;
   margin-bottom: 1.5em;
-  text-align: center;
   margin-left: auto;
   margin-right: auto;
   overflow-x: hidden;
@@ -216,4 +215,97 @@ th.dt-center, td.dt-center {
   position: fixed;
   top: 0;
   width: 100%
+}
+
+.edit-box {
+  justify-content: center;
+  align-items: center;
+}
+
+.dashboard-subtitle {
+  display: flex; 
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.toxicity {
+  text-align: center;
+}
+
+/* FORM */
+.radio-toolbar {
+  margin: 10px;
+}
+
+.flagged {
+  display: inline-block;
+}
+
+.radio-toolbar input[type="radio"] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+.radio-toolbar label {
+  display: inline-block;
+  background-color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 4px;
+}
+
+/*when hovering*/
+.radio-toolbar label[for="good"]:hover {
+  background-color: #74c687;
+  color: white;
+}
+
+.radio-toolbar label[for="notsure"]:hover {
+  background-color: #a0a6ab;
+  color: white;
+}
+
+.radio-toolbar label[for="report"]:hover {
+  background-color: #e87c87;
+  color: white;
+}
+
+/*when clicked*/
+.radio-toolbar input[id="good"]:checked+label {
+  background-color: #28a745;
+  border-color: #4c4;
+  color: white;
+}
+
+.radio-toolbar input[id="notsure"]:checked+label {
+  background-color: #6c757d;
+  border-color: #4c4;
+  color: white;
+}
+
+.radio-toolbar input[id="report"]:checked+label {
+  background-color: #dc3545;
+  border-color: #4c4;
+  color: white;
+}
+
+/* submit button */
+#submit {
+  background-color: white;
+  border-color: #a0a6ab;
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 4px;
+}
+
+#submit:hover {
+  background-color: #e8e6e1;
+}
+
+/* actions */
+#list-div {
+    align-items: center;
+    justify-content: center;
 }
